Plano de Gestão de Pessoas
Plano de Gestão de Pessoas

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -514,8 +514,113 @@ Para o atendimento das necessidades priorizadas, foram identificados XXX projeto
 
 -- novos projetos --
 
-# 10  PLANO DE GESTÃO DE PESSOAS
-<< Inserir o plano de gestão de pessoas, indicando o quantitativo e a qualificação dos recursos humanos necessários para se alcançar as metas e as ações estabelecidas. Caso não se disponha de quadros adequados, deve-se planejar o quantitativo e a qualificação ideal. É importante fazer esta análise considerando a execução direta e indireta (contratada) >>
+# 10  PLANO DE GESTÃO DE PESSOAS DA TIC NO MINC
+
+A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTEC) do MinC até março de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
+
+**2018**
+| Área             | Servidores | Terceirizados | Estagiários | Total | 
+|------------------|------------|---------------|-------------|-------| 
+| CGTEC            | 5          | 3             |             | 8     | 
+| COINT            | 3          | 30            | 1           | 34    | 
+| COSIN            | 2          | 14            | 9           | 22    | 
+| Total            | 10         | 47            | 10          | 67    | 
+| Distribuição (%) | 14,95%     | 70,1%         | 14,95%      |       | 
+
+
+É possível observar, a partir da comparação com a situação de pessoal nos três anos anteriores (de 2015 a 2017), que houve uma redução de recursos humanos para a área de TIC embora esta venha conquistando papel cada dia mais estratégico na organização.
+
+**2017**
+| Área             | Servidores | Terceirizados | Estagiários | Total | 
+|------------------|------------|---------------|-------------|-------| 
+| CGTEC            | 1          | 2             | 1           | 4     | 
+| COINT            | 4          | 49            | 1           | 54    | 
+| COSIS            | 3          | 11            | 4           | 18    | 
+| CGOVE            | 4          | 3             | 0           | 7     | 
+| Total            | 12         | 65            | 6           | 83    | 
+| Distribuição (%) | 14,8%      | 80,2%         | 5%          |       | 
+
+**2016**
+| Área             | Servidores | Terceirizados | Estagiários | Total | 
+|------------------|------------|---------------|-------------|-------| 
+| CGTEC            | 2          | 3             | 0           | 5     | 
+| COINT            | 4          | 60            | 2           | 66    | 
+| COSIS            | 5          | 0             | 4           | 9     | 
+| CGOVE            | 8          | 0             | 0           | 8     | 
+| Total            | 19         | 63            | 6           | 88    | 
+| Distribuição (%) | 21,59%     | 71,59%        | 6,81%       |       | 
+
+**2015**
+| Área             | Servidores | Terceirizados | Estagiários | Total | 
+|------------------|------------|---------------|-------------|-------| 
+| CGTEC            | 1          | 4             | 2           | 7     | 
+| COINT            | 7          | 49            | 4           | 60    | 
+| COSIS            | 5          | 1             | 1           | 7     | 
+| CGOVE            | 5          | 3             | 0           | 8     | 
+| Total            | 18         | 57            | 7           | 82    | 
+| Distribuição (%) | 21,95 %    | 69,51 %       | 8,54 %      |       | 
+
+Os servidores da CGTEC dedicam maior parte de seu tempo no planejamento das contratações e na gestão dos contratos, sendo as atividades operacionais basicamente terceirizadas.
+
+Como vem sendo diagnosticado em planejamentos anteriores, a quantidade de servidores para a gestão dessa unidade de TIC é pequena, sendo necessário aumentar o quadro da CGTEC, por meio da solicitação de novos Analistas em Tecnologia da Informação ao Ministério do Planejamento, Desenvolvimento e Gestão, ou ainda da alocação de servidores efetivos do MinC na CGTEC.
+
+Devido à reformulação da estrutura de cargos do MinC, ocorrida em 2016, a estrutura da CGTEC foi reduzida perdendo a Coordenação de Governança e cargos de chefia, cujo retorno vem sendo reivindicado para o melhor funcionamento da unidade.
+
+De acordo com o guia de PDTIC do SISP, “o planejamento de TIC apoia a realização de uma gestão efetiva de recursos. Isto se refere a melhor utilização possível dos investimentos e o apropriado gerenciamento dos recursos críticos de TIC: aplicativos, processos, informações, infraestrutura e pessoas.”
+
+## 10.1 Plano de Capacitação da TIC do MinC
+
+O público-alvo do Plano de Capacitação da TIC do MinC são todos os servidores, efetivos e comissionados, que compõem a estrutura e força de trabalho da CGTEC no âmbito do Ministério da Cultura.
+
+O objetivo geral do referido Plano de Capacitação consiste em melhorar a eficiência e a qualidade dos serviços prestados pela CGTEC a seus públicos por meio da capacitação permanente e incentivo ao desenvolvimento profissional dos servidores da CGTEC a fim de que possam desenvolver as competências requeridas para o alcance dos objetivos da CGTEC e com isso contribuir efetivamente para o alcance dos objetivos do MinC.
+
+Os objetivos específicos são:
+
+1. Promover o desenvolvimento das competências e habilidades do servidor da CGTEC necessárias ao bom desempenho de suas atividades;
+1. Ofertar ações de capacitação adequando as competências requeridas dos servidores da CGTEC aos objetivos institucionais;
+1. Contribuir para o desenvolvimento integral do servidor, proporcionando atuação funcional mais eficiente e eficaz, e consequentemente melhoria na qualidade do trabalho.
+
+Sob a perspectiva de Orientação Futura, o Plano de Capacitação da CGTEC está diretamente relacionado com o Objetivo Estratégico da TI de nº 6 que é “Garantir desenvolvimento de competências na força de trabalho de TI” cuja descrição segue como:
+
+> “Prover os recursos humanos necessários ao bom desempenho das atividades e promover o desenvolvimento de conhecimento, habilidades e atitudes de forma a fortalecer as ações de gestão, fiscalização, monitoramento e controle de serviços de TI.” (PETI-2014-2016)
+
+Tal perspectiva tem como Iniciativas Estratégicas:
+
+- **IE 6.1** Adotar medidas para alcance e manutenção de percentual mínimo da força de trabalho (efetivos, comissionados e terceirizados) compatível com a demanda de TIC.
+- **IE 6.2** Promover o desenvolvimento de competências de TIC.
+
+| Indicador                          | Meta                                                                                            | 
+|------------------------------------|-------------------------------------------------------------------------------------------------| 
+| Plano interno de força de trabalho | Estabelecer um plano com medidas para garantir força de trabalho compatível com a demanda de TI | 
+| Banco de competência               | Elaborar e manter um banco de competências                                                      | 
+| Plano de capacitação               | Estabelecer um Plano de Capacitação com propostas anuais de treinamento                         | 
+
+A CGTEC, quando for o caso, viabilizará capacitações “In Company”, a fim de capacitar o maior número de servidores da área ao mesmo tempo dentro da própria instituição acerca de temas estratégicos de TIC.
+
+### Necessidade de Capacitação Específica para a equipe da CGTEC 
+
+| Tema                                                                                         | Quantitativo de servidores a capacitar (2018) | 
+|----------------------------------------------------------------------------------------------|-----------------------------------------------| 
+| Gestão de Segurança da Informação, ISO/IEC 27.002 Foundation                                 | 3                                             | 
+| Gestão de Riscos, com foco na norma NBR ISO/IEC 31.000                                       | 3                                             | 
+| Monitoramento, Avaliação e Indicadores na TIC                                                | 3                                             | 
+| Gestão e Governança de TI, ITIL® Foundation  e CobIT®                                        | 8                                             | 
+| Auditoria de TIC, com foco em atividades de controle interno, externo e normas de auditoria. | 4                                             | 
+| Análise e melhoria de processos – com foco em modelagem de processos de negócio (BPM).       | 8                                             | 
+| Planejamento de TI e elaboração de indicadores.                                              | 3                                             | 
+| Gestão de desenvolvimento de sistemas de informação                                          | 3                                             | 
+| Metodologias ágeis de desenvolvimento de sistemas                                            | 3                                             | 
+| Políticas de Segurança da Informação                                                         | 10                                            | 
+| Infraestrutura ágil com práticas DEVOPS usando Docker, Git, Jenkins, Puppet e Ansible        | 7                                             | 
+| PHP Avançado                                                                                 | 4                                             | 
+| Contratação de Soluções de TI de acordo com a IN SLTI/MP n° 04/2014 e atualizações           | 8                                             | 
+| Gestão e fiscalização de contratos administrativos – com ênfase em contratos de TIC          | 8                                             | 
+| Gerência de Projetos                                                                         | 10                                            | 
+| Python Avançado                                                                              | 2                                             | 
+| Inteligência Artificial - Deep Learning                                                      | 2                                             | 
+| Congressos, workshops e eventos técnicos                                                     | Sob demanda                                   | 
+
+Os recursos a serem investidos na capacitação dos servidores da CGTEC podem ser captados de acordo com a disponibilidade de orçamento prevista no PDTIC e no PCDMinC – 2018.
 
 # 11  PLANO ORÇAMENTÁRIO DO PDTI
 << Inserir o Plano Orçamentário, classificando as despesas entre investimento e custeio, bem como consolidar o valor necessário das ações planejadas >>
