Alteração na formatação do texto
Alteração na formatação do texto

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -420,13 +420,12 @@ o portfólio de projetos no período 2015-2017 totalizou **163 projetos de TI**.
 
 | Situação        | Qtd | %   | 
 |-----------------|-----|-----| 
-| 0. Não Iniciado | 24  | 15% | 
-| 1. Pré-projeto  | 5   | 3%  | 
-| 2.              | 0   | 0%  | 
-| 3. Em execução  | 21  | 13% | 
-| 4. Concluído    | 72  | 44% | 
-| 5. Suspenso     | 20  | 12% | 
-| 6. Cancelado    | 21  | 13% | 
+|    Não Iniciado | 24  | 15% | 
+|    Pré-projeto  | 5   | 3%  | 
+|    Em execução  | 21  | 13% | 
+|    Concluído    | 72  | 44% | 
+|    Suspenso     | 20  | 12% | 
+|    Cancelado    | 21  | 13% | 
 
 
 #### Quantitativo de Projetos por Tipo
@@ -443,49 +442,45 @@ o portfólio de projetos no período 2015-2017 totalizou **163 projetos de TI**.
 
 | Situação dos Projetos de Infra | Qtd | %   | 
 |--------------------------------|-----|-----| 
-| 0. Não Iniciado                | 5   | 17% | 
-| 1. Pré-projeto                 | 1   | 3%  | 
-| 2.                             | 0   | 0%  | 
-| 3. Em execução                 | 4   | 14% | 
-| 4. Concluído                   | 13  | 45% | 
-| 5. Suspenso                    | 4   | 14% | 
-| 6. Cancelado                   | 2   | 7%  | 
+|    Não Iniciado                | 5   | 17% | 
+|    Pré-projeto                 | 1   | 3%  | 
+|    Em execução                 | 4   | 14% | 
+|    Concluído                   | 13  | 45% | 
+|    Suspenso                    | 4   | 14% | 
+|    Cancelado                   | 2   | 7%  | 
 
 #### Resultados dos Projetos de Desenvolvimentos de Sistemas
 
 | Situação dos Projetos de Desenvolvimento | Qtd | %   | 
 |------------------------------------------|-----|-----| 
-| 0. Não Iniciado                          | 10  | 14% | 
-| 1. Pré-projeto                           | 0   | 0%  | 
-| 2.                                       | 0   | 0%  | 
-| 3. Em execução                           | 12  | 16% | 
-| 4. Concluído                             | 38  | 51% | 
-| 5. Suspenso                              | 11  | 15% | 
-| 6. Cancelado                             | 3   | 4%  | 
+|    Não Iniciado                          | 10  | 14% | 
+|    Pré-projeto                           | 0   | 0%  | 
+|    Em execução                           | 12  | 16% | 
+|    Concluído                             | 38  | 51% | 
+|    Suspenso                              | 11  | 15% | 
+|    Cancelado                             | 3   | 4%  | 
 
 #### Resultados dos Projetos de Governança de TI
 
 | Situação dos Projetos de Governança | Qtd | %   | 
 |-------------------------------------|-----|-----| 
-| 0. Não Iniciado                     | 3   | 14% | 
-| 1. Pré-projeto                      | 0   | 0%  | 
-| 2.                                  | 0   | 0%  | 
-| 3. Em execução                      | 3   | 14% | 
-| 4. Concluído                        | 11  | 50% | 
-| 5. Suspenso                         | 2   | 9%  | 
-| 6. Cancelado                        | 3   | 14% | 
+|    Não Iniciado                     | 3   | 14% | 
+|    Pré-projeto                      | 0   | 0%  | 
+|    Em execução                      | 3   | 14% | 
+|    Concluído                        | 11  | 50% | 
+|    Suspenso                         | 2   | 9%  | 
+|    Cancelado                        | 3   | 14% | 
 
 #### Resultados dos Projetos de Aquisições em TIC
 
 | Situação dos Projetos de Aquisição | Qtd | %   | 
 |------------------------------------|-----|-----| 
-| 0. Não Iniciado                    | 6   | 16% | 
-| 1. Pré-projeto                     | 4   | 11% | 
-| 2.                                 | 0   | 0%  | 
-| 3. Em execução                     | 2   | 5%  | 
-| 4. Concluído                       | 10  | 26% | 
-| 5. Suspenso                        | 3   | 8%  | 
-| 6. Cancelado                       | 13  | 34% | 
+|    Não Iniciado                    | 6   | 16% | 
+|    Pré-projeto                     | 4   | 11% | 
+|    Em execução                     | 2   | 5%  | 
+|    Concluído                       | 10  | 26% | 
+|    Suspenso                        | 3   | 8%  | 
+|    Cancelado                       | 13  | 34% | 
 
 ## 6.2 Relatório de Resultados
 
@@ -522,7 +517,7 @@ A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTE
 
 | Área             | Servidores | Terceirizados | Estagiários | Total | 
 |------------------|------------|---------------|-------------|-------| 
-| CGTEC            | 5          | 3             |             | 8     | 
+| CGTEC            | 5          | 3             | 0           | 8     | 
 | COINT            | 3          | 30            | 1           | 34    | 
 | COSIN            | 2          | 14            | 9           | 22    | 
 | Total            | 10         | 47            | 10          | 67    | 
@@ -601,7 +596,7 @@ Tal perspectiva tem como Iniciativas Estratégicas:
 
 A CGTEC, quando for o caso, viabilizará capacitações “In Company”, a fim de capacitar o maior número de servidores da área ao mesmo tempo dentro da própria instituição acerca de temas estratégicos de TIC.
 
-### Necessidade de Capacitação Específica para a equipe da CGTEC 
+## 10.2 Necessidade de Capacitação Específica para a equipe da CGTEC 
 
 | Tema                                                                                         | Quantitativo de servidores a capacitar (2018) | 
 |----------------------------------------------------------------------------------------------|-----------------------------------------------| 
@@ -635,43 +630,42 @@ O plano de gestão de riscos identifica os principais riscos que podem resultar 
 
 |    ID    |                                                 Risco                                                |    Probabilidade    |    Impacto    |     Tratamento     |
 |:--------:|:----------------------------------------------------------------------------------------------------:|:-------------------:|:-------------:|:------------------:|
-|    R1    |    Descontinuidade dos negócios pela não manutenção de contratos que suportam atividades críticas    |        Média        |      Alto     |    Contigenciar    |
-|    R2    |    Restrições orçamentárias                                                                          |         Alta        |      Alto     |       Aceitar      |
-|    R3    |    Evasão de servidores da área de TI                                                                |         Alta        |     Médio     |    Contigenciar    |
-|    R4    |    Insuficiência de recursos humanos para execução das ações planejadas                              |         Alta        |      Alto     |       Mitigar      |
-|    R5    |    Falta de patrocínio da Alta Direção                                                               |        Baixa        |      Alto     |       Mitigar      |
+|  **R1**  |    Descontinuidade dos negócios pela não manutenção de contratos que suportam atividades críticas    |        Média        |      Alto     |    Contigenciar    |
+|  **R2**  |    Restrições orçamentárias                                                                          |         Alta        |      Alto     |       Aceitar      |
+|  **R3**  |    Evasão de servidores da área de TI                                                                |         Alta        |     Médio     |    Contigenciar    |
+|  **R4**  |    Insuficiência de recursos humanos para execução das ações planejadas                              |         Alta        |      Alto     |       Mitigar      |
+|  **R5**  |    Falta de patrocínio da Alta Direção                                                               |        Baixa        |      Alto     |       Mitigar      |
 
-### 12.1 R1 - Descontinuidade dos negócios
+### 12.1 **R1** - Descontinuidade dos negócios
 
 Apesar de as atividades de Tecnologia da Informação serem planejadas, coordenadas e gerenciadas por servidores efetivos, a execução operacional de quase todas ocorrem por meio de contratos e termos de parceria firmados com prestadores externos de serviços técnicos especializados. Caso haja interrupção na execução destas parcerias, o impacto na operação da infraestrutura de TI e no desenvolvimento e manutenção de sistemas é imediato e **alto** – colocando em risco a continuidade das atividades críticas da instituição. 
 
 Dentre as possíveis razões para interrupção de contratos e Termos de Execução Descentralizadas, as principais são a impossibilidade legal dos fornecedores para renovações anuais, o reiterado descumprimento dos critérios de qualidade e performance estipulados e a perda das condições de habilitação. A probabilidade de ocorrência de tais fatos é **média** e requer uma gestão eficaz e constante fiscalização da qualidade dos serviços prestados, apoiados em modelos de remuneração por resultados, na avaliação da qualidade e no cumprimento de níveis mínimos de serviço.
 
-### 12.2 R2 - Restrições orçamentárias
+### 12.2 **R2** - Restrições orçamentárias
 
 Nos últimos anos o Governo Federal vem praticando fortes cortes no orçamento federal, atingindo todos os órgãos e entidades do Poder Executivo. Tais cortes e contingenciamentos de recursos trarão impactos **diretos e imediatos** às ações planejadas podendo resultar em seu atraso, suspensão e até cancelamento. A probabilidade de ocorrência de restrições orçamentárias é **alta**, considerando o cenário atual, os reflexos da política econômica do Governo e o período de transição eleitoral.
 
 Como é um fator externo ao MinC, não é possível minimizar sua probabilidade de ocorrência. A mitigação de tal risco se limita a manter uma priorização adequada das ações, que não permite o contigenciamento orçamentário, para que não haja adiamento ou inexecução por parte dos projetos.
 
-### 12.3 R3 - Evasão de Servidores da Área de TI
+### 12.3 **R3** - Evasão de Servidores da Área de TI
 
 A área de TI do MinC conta com apenas 10 servidores do quadro próprio em exercício, não havendo previsão de nenhum novo ingresso. A força de trabalho é composta essencialmente por técnicos contratados e por servidores integrantes do quadro próprio e de carreira de outros órgãos – destacadamente os Analistas em Tecnologia da Informação. O impacto desta evasão é **médio**, pois o quadro de servidores já está abaixo do nível mínimo desejado para a área; no entanto, a probabilidade de ocorrência é **alta** – dado que o histórico destas ocorrências no passado é considerável.
 
 Ações no sentido de proporcionar atrativos para a fixação desses servidores tendem a apresentar resultados positivos. Órgãos que oferecem condições de crescimento profissional, como cargos de direção e assessoramento (DAS), têm conseguido manter seus servidores na área de TI e minimizar os riscos de evasão. Adicionalmente, para reduzir esse risco, se faz necessário estabelecer um plano para capacitar tais servidores, esta ação visa assegurar a qualificação e produtividade, em consequência disso, manter servidores alocados nas áreas de seu interesse. Como resultado, almeja-se a manutenção de um quadro de pessoal integrado e motivado. Quanto à redução do impacto, ao menos dois servidores devem estar simultaneamente envolvidos com cada atividade ou projeto, sempre que possível. Outro fator que reduz o impacto é a existência de processos de trabalho documentados e a aderência a estes na execução das atividades da CGTEC 
 
-### 12.4 R4 - Insuficiência de Recursos Humanos
+### 12.4 **R4** - Insuficiência de Recursos Humanos
 
 É fato que o órgão enfrenta restrições relacionadas à insuficiência de recursos humanos do quadro de servidores para execução do escopo de suas atividades, não só na TI, mas em toda a sua estrutura. Como tal situação afeta profundamente as ações de TI, que são claramente separadas entre atividades gerenciais (atribuídas aos servidores) e atividades operacionais (aptas à delegação aos parceiros), a instituição lida constantemente com sério déficit de projetos, políticas e contratações estruturais. Em médio prazo, a fim de reduzir a probabilidade e o impacto deste risco, o órgão deve trabalhar na contratação de novos servidores, por meio de concurso público. 
 
-### 12.5 R5 - Falta de patrocínio da Alta Direção
+### 12.5 **R5** - Falta de patrocínio da Alta Direção
 
 Um dos principais fatores de sucesso de todas as iniciativas de TI é o apoio da alta direção. Este é um princípio defendido pelos mais respeitadas referência em governança de TI como é o caso do guia de boas práticas COBIT e pela norma ISSO/IEC 38500 que oferece princípios para orientar os dirigentes das organizações sobre o uso eficaz, eficiente e aceitável da TI. 
 
 Considerando que a alta direção é composta pelas pessoas que possuem o mandato legítimo para escolher o que é melhor para a organização, uma iniciativa de TI que não contar com o seu apoio não obterá sucesso simplesmente porque na análise comparativa entre as iniciativas que podem ser conduzidas, ela foi classificada como de menor importância, pois há um desalinhamento de objetivos entre duas esferas de decisão, a Coordenação-Geral de Infraestrutura Tecnológica e a alta direção. E neste caso, as opiniões da alta direção têm precedência sobre as opiniões da CGTEC. Duas são as possíveis fontes de desalinhamento:
 
-1.	A discrepância entre os conhecimentos de TI existentes entre a alta direção e a CGTEC. O que é natural, visto que a especialidade da área de TI é tecnicamente diferente da especialidade da alta direção. Assim para mitigar este risco, cabem aos gestores de TI traduzir os custos e benefícios da TI em termos de custos e benefícios de negócio. O caminho indicado vai depender exclusivamente das características da alta direção da organização combinadas às orientações estratégicas da instituição. 
-
-2.	Outra fonte para o desalinhamento de objetivos é a discrepância entre as agendas. Enquanto a alta direção se orienta para determinadas ações estratégicas as iniciativas de TI estão propostas com orientações distintas. Este problema pode ser resolvido com o alinhamento das agendas por meio do Comitê de Governança Digital que tem representação da Secretaria Executiva, das Secretarias (gestoras de negócio) e da CGTEC. Esta ação tem como objetivo instituir uma agenda única e, consequentemente, um alinhamento de objetivos da TI com a alta direção. 
+1. A discrepância entre os conhecimentos de TI existentes entre a alta direção e a CGTEC. O que é natural, visto que a especialidade da área de TI é tecnicamente diferente da especialidade da alta direção. Assim para mitigar este risco, cabem aos gestores de TI traduzir os custos e benefícios da TI em termos de custos e benefícios de negócio. O caminho indicado vai depender exclusivamente das características da alta direção da organização combinadas às orientações estratégicas da instituição. 
+1. Outra fonte para o desalinhamento de objetivos é a discrepância entre as agendas. Enquanto a alta direção se orienta para determinadas ações estratégicas as iniciativas de TI estão propostas com orientações distintas. Este problema pode ser resolvido com o alinhamento das agendas por meio do Comitê de Governança Digital que tem representação da Secretaria Executiva, das Secretarias (gestoras de negócio) e da CGTEC. Esta ação tem como objetivo instituir uma agenda única e, consequentemente, um alinhamento de objetivos da TI com a alta direção. 
 
 # 13  PROCESSO DE REVISÃO DO PDTI 
 << Informar a periodicidade das revisões que ocorrerão durante a validade do PDTI, bem como os responsáveis pelas revisões e os motivos que podem provocar atualizações no documento >>
