--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -25,13 +25,30 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**  
-Subsecretaria de Planejamento, Orçamento e Administração (SPOA)  
-Secretaria da Cidadania e da Diversidade Cultural (SCDC)  
-Secretaria do Audiovisual (SAV)  
-Secretaria da Economia da Cultura (SEC)  
-Secretaria de Articulação e Desenvolvimento Institucional (SADI)  
-Secretaria de Fomento e Incentivo à Cultura (SEFIC)  
-Secretaria de Infraestrutura Cultural (SEINFRA)  
+- Secretaria de Articulação e Desenvolvimento Institucional:  
+Magali Guedes de Magela Moura - Titular  
+Teresa Cristina Rocha Azevedo de Oliveira - Suplente 
+
+- Secretaria do Audiovisual:  
+João Batista da Silva - Titular  
+Sorahia Maria Segall - Suplente  
+
+- Secretaria da Cidadania e da Diversidade Cultural:  
+Débora Fernanda Pinto Albuquerque - Titular  
+Cristiano Vasconcelos da Silva - Suplente  
+
+- Secretaria da Economia da Cultura: 
+Mansur Abunasser Bassit - Titular  
+Lucas Mastellaro Baruzzi​ - Suplente 
+
+- Secretaria de Fomento e Incentivo à Cultura:  
+José Paulo Soares Martins - Titular  
+Jorge Oliveira Linhares Arruda  - Suplente   
+
+Secretaria de Infraestrutura Cultural:  
+Antonio Alfredo Bertini de Torres Bandeira - Titular  
+Paulo Edy Nakamura - Suplente  
+
  
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -144,13 +161,7 @@ Por fim, sugere-se a inclusão da competência de comunicação na unidade, tran
 
 # 4  REFERENCIAL ESTRATÉGICO
 
-## 4.1 Estratégia da Organização
-
-O mapa estratégico do Ministério da Cultura – MinC  está estruturado em três perspectivas: Inovação e Pessoas, Resultados Institucionais e Referencial Estratégico. Essas perspectivas representam um encadeamento lógico da estratégia de atuação do órgão. Cada uma engloba um conjunto de objetivos estratégicos que retratam os principais desafios a serem enfrentados pelo MinC no alcance de sua visão de futuro e no cumprimento de sua missão institucional. As perspectivas, quando vistas em conjunto, permitem uma visão completa da estratégia da instituição e contam a história da estratégia de uma forma clara e de fácil compreensão.
-
-![egd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/estrategiaminc.png "Mapa Estratégico do Ministério da Cultura.")
-
-## 4.2 Estratégia de Governança Digital da Administração Pública Federal - EGD
+## 4.1 Estratégia de Governança Digital da Administração Pública Federal - EGD
 
 A Governança Digital é a utilização, pelo setor público, de tecnologias da informação e comunicação com o objetivo de melhorar a informação e a prestação de serviços, incentivando a participação dos cidadãos no processo de tomada de decisão e tornando o governo mais responsável, transparente e eficaz.
 
@@ -158,24 +169,36 @@ De forma a nortear os programas, projetos, serviços, sistemas e atividades rela
 
 A publicação da EGD se deu por meio da Portaria nº 68, de 8 de março de 2016, a qual a aprovou para o período 2016-2019 e atribuiu à Secretaria de Tecnologia da Informação e Comunicação a competência de coordenar a formulação, o monitoramento, a avaliação e a revisão da EGD, com participação das demais unidades que atuam como órgão central dos sistemas estruturantes do Poder Executivo federal.
 
-A EGD se baseia em nove princípios que orientam as atividades de governança digital na Administração Pública Federal: Foco nas necessidades da sociedade; Abertura e transparência; Compartilhamento da capacidade de serviço; Simplicidade; Priorização de serviços públicos disponibilizados em meio digital; Segurança e privacidade; Participação e controle social; Governo como plataforma e Inovação. 
+A EGD se baseia em nove princípios que orientam as atividades de governança digital na Administração Pública Federal: Foco nas necessidades da sociedade; Abertura e transparência; Compartilhamento da capacidade de serviço; Simplicidade; Priorização de serviços públicos disponibilizados em meio digital; Segurança e privacidade; Participação e controle social; Governo como plataforma e Inovação.
 
 Também são propostos dez objetivos estratégicos, organizados em três eixos estratégicos: Acesso à Informação, Prestação de Serviços e Participação Social, conforme ilustrado a seguir:
 
 ![egd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/egd.png "Diagrama Estratégico da EGD")
 
-Percebe-se que a EGD busca estimular as ações de convergência de esforços quanto às infraestruturas, plataformas, sistemas e serviços entre os órgãos.  Nesse sentido, o Ministério da Cultura já vem realizando diversas ações tanto com os órgãos integrantes do sistema MinC, por meio de um Comitê Integrado com representantes da TI de todos os órgãos (será detalhado adiante), como, também, por meio de parcerias com outros entes públicos externos ao sistema MinC. 
+Percebe-se que a EGD busca estimular as ações de convergência de esforços quanto às infraestruturas, plataformas, sistemas e serviços entre os órgãos. Nesse sentido, o Ministério da Cultura já vem realizando diversas ações tanto com os órgãos integrantes do sistema MinC, por meio de um Comitê Integrado com representantes da TI de todos os órgãos (será detalhado adiante), como, também, por meio de parcerias com outros entes públicos externos ao sistema MinC.
 
 Nessa toada, vale destacar que o PDTIC MinC 2015-2017 foi completamente revisado para seu alinhamento à época do lançamento da EGD, tendo sido publicada uma versão que foi considerada percussora entre os órgãos. Da mesma forma, para elaboração deste PDTIC 2018-2020 buscou-se o alinhamento integral aos objetivos estratégicos e metas propostas pela EGD.
 
+## 4.2 Estratégia da Organização
+
+O mapa estratégico do Ministério da Cultura – MinC está estruturado em três perspectivas: Inovação e Pessoas, Resultados Institucionais e Referencial Estratégico. Essas perspectivas representam um encadeamento lógico da estratégia de atuação do órgão. Cada uma engloba um conjunto de objetivos estratégicos que retratam os principais desafios a serem enfrentados pelo MinC no alcance de sua visão de futuro e no cumprimento de sua missão institucional. As perspectivas, quando vistas em conjunto, permitem uma visão completa da estratégia da instituição e contam a história da estratégia de uma forma clara e de fácil compreensão.
+
+![estrategiaminc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/estrategiaminc.png "Mapa Estratégico do Ministério da Cultura.") 
+
+Destaca-se do mapa estratégico acima, a preocupação do Ministério com a inovação por meio da modernização da Tecnologia da Informação. Nota-se que a Tecnologia da Informação é um elemento essencial para o desenvolvimento das políticas públicas culturais, permeando praticamente todas as atividades do Ministério, em função de sua natureza transversal, que presta suporte tecnológico a todas as unidades da organização.  
+
 ## 4.3 Estratégia de TIC
 
+Tendo como principais referências a Estratégia De Governança Digital do Governo Federal e a Estratégia da Organização, ambas tratadas nos tópicos acima, traçou-se a Estratégia de TIC do Ministério da Cultura, como pode ser observado a seguir: 
+
 ### Missão da TIC
+
 Oferecer para os usuários do Sistema Minc e para os cidadãos brasileiros uma experiência tecnológica simples e intuitiva, por meio de ferramentas de gestão participativa, de transparência de informações e da oferta de serviços digitais que facilitem a relação do cidadão com as políticas públicas do Ministério da Cultura.
 
 ### Visão da TIC
+
 Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboração e cooperação, com capacidade de atendimento de alta qualidade para seus usuários, com foco no cidadão, com o apoio de soluções livres, métodos ágeis e governança participativa de TI.
- 
+
 ### Valores da TIC
 - **Comunicação** – Primar pela comunicação ativa entre unidades e usuários, a fim de proporcionar a troca de ideias, o diálogo e o compartilhamento da informação.
 - **Eficiência** – Entregar a informação adequada, no tempo certo, de maneira mais econômica e produtiva.
