--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -25,23 +25,23 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**  
-- Secretaria de Articulação e Desenvolvimento Institucional:  
+Secretaria de Articulação e Desenvolvimento Institucional:  
 Magali Guedes de Magela Moura - Titular  
 Teresa Cristina Rocha Azevedo de Oliveira - Suplente 
 
-- Secretaria do Audiovisual:  
+Secretaria do Audiovisual:  
 João Batista da Silva - Titular  
 Sorahia Maria Segall - Suplente  
 
-- Secretaria da Cidadania e da Diversidade Cultural:  
+Secretaria da Cidadania e da Diversidade Cultural:  
 Débora Fernanda Pinto Albuquerque - Titular  
 Cristiano Vasconcelos da Silva - Suplente  
 
-- Secretaria da Economia da Cultura: 
+Secretaria da Economia da Cultura: 
 Mansur Abunasser Bassit - Titular  
 Lucas Mastellaro Baruzzi​ - Suplente 
 
-- Secretaria de Fomento e Incentivo à Cultura:  
+Secretaria de Fomento e Incentivo à Cultura:  
 José Paulo Soares Martins - Titular  
 Jorge Oliveira Linhares Arruda  - Suplente   
 
