--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -268,18 +268,18 @@ Para definir os objetivos estratégicos de TIC do Ministério da Cultura, utiliz
 
 
 
-| Perspectiva                   |                                                                                                                          | 
-|-------------------------------|--------------------------------------------------------------------------------------------------------------------------| 
-| Orientado ao Cidadão          | - **OE.01** - Ampliar a oferta de serviços digitais de forma a potencializar as políticas públicas culturais             | 
-|                               | - **OE.02** - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos | 
-| Processos e Usuários Internos | - **OE.03** - Aumentar o nível de maturidade dos processos de TIC                                                        | 
-|                               | - **OE.04** - Estimular a Gestão do Conhecimento no MinC                                                                 | 
-|                               | - **OE.05** - Aprimorar práticas de gestão da qualidade dos serviços de TIC                                              | 
-| Orientado aos Recursos        | - **OE.06** - Compartilhar e integrar dados, processos, sistemas, serviços e infraestrutura de TIC com outros órgãos     | 
-| Inovação e Crescimento        | - **OE.07** - Modernizar e ampliar a estrutura funcional da área de TIC                                                  | 
-|                               | - **OE.08** - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | 
-|                               | - **OE.09** - Estimular o uso e compartilhamento de tecnologias livres                                                   | 
-|                               | - **OE.10** – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | 
+| Perspectiva                   | Objetivo Estratégico                                                                                                   | 
+|-------------------------------|------------------------------------------------------------------------------------------------------------------------| 
+| Orientado ao Cidadão          | **OE.01** - Ampliar a oferta de serviços digitais de forma a potencializar as políticas públicas culturais             | 
+|| **OE.02** - Fomentar a abertura de dados e estimular a participação social na construção de melhores serviços públicos | 
+| Processos e Usuários Internos | **OE.03** - Aumentar o nível de maturidade dos processos de TIC                                                        | 
+|| **OE.04** - Estimular a Gestão do Conhecimento no MinC                                                                 | 
+|| **OE.05** - Aprimorar práticas de gestão da qualidade dos serviços de TIC                                              | 
+| Orientado aos Recursos        | **OE.06** - Compartilhar e integrar dados, processos, sistemas, serviços e infraestrutura de TIC com outros órgãos     | 
+| Inovação e Crescimento        | **OE.07** - Modernizar e ampliar a estrutura funcional da área de TIC                                                  | 
+|| **OE.08** - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | 
+|| **OE.09** - Estimular o uso e compartilhamento de tecnologias livres                                                   | 
+|| **OE.10** – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | 
 
 
 
